@@ -10,7 +10,7 @@ importFrom("stats", "median")
 exportClasses(Image)
 
 ## image class, accessors
-export(Image, is.Image, as.Image, print.Image)
+export(Image, is.Image, as.Image, print.Image, as.raster.Image)
 export(Grayscale, TrueColor, Color)
 exportMethods(Ops, "[")
 export(colorMode, "colorMode<-", imageData, "imageData<-")
